k8s/base/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: travel-planner
  labels:
    app.kubernetes.io/name: travel-planner-backend
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: travel-planner
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: "__ACTION_TIME_ACM_CERTIFICATE_ARN__"
    alb.ingress.kubernetes.io/subnets: "__ACTION_TIME_PUBLIC_SUBNET_IDS__"
    alb.ingress.kubernetes.io/healthcheck-port: "9091"
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/group.name: kdt-travelplanner-dev-eks
spec:
  ingressClassName: alb
  rules:
    - host: __ACTION_TIME_BACKEND_HOSTNAME__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http
